add tour points include to tour routes
