# docker_data/redoc/swagger.yaml
@@ -860,6 +860,35 @@ paths:
           description: Forbidden
         "500":
           description: Internal Server Error
+  /tourpointtype/{id}:
+    get:
+      summary: Get a specific tour point type object
+      security:
+        - bearerAuth: []
+      tags:
+        - TourPointType
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: id of the tour point type
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/TourPointType"
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
 components:
   securitySchemes:
     bearerAuth: # arbitrary name for the security scheme
@@ -1007,6 +1036,8 @@ components:
       properties:
         id:
           type: string
+        type:
+          $ref: "#/components/schemas/TourPointType"
         longitude:
           type: number
         latitude:
@@ -1022,7 +1053,19 @@ components:
         tourId:
           type: string
           nullable: true
-
+    TourPointType:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        dateCreated:
+          type: string
+          format: date-time
+        dateUpdated:
+          type: string
+          format: date-time
     Tour:
       type: object
       properties:
